@@ -1,3 +1,5 @@
+- JrCs - boot1-install can show ntfs volume.
+
 - ErmaC - Auto increase year for pkg resource.
 
 - JrCs - Add translation to the project.
